css/styles.css
body {
  font-family: "Rubik", sans-serif;
  margin: 0;
}

.topHeader {
  position: fixed;
  width: 100vw;
  background-color: #ffffff;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding-bottom: 13px;
  padding-top: 10px;
}

.logo {
  width: 155px;
}

.title {
  font-size: 30px;
  font-weight: bold;
  text-align: center;
}

.menu {
  margin-top: 10px;
  color: #4a4a4a;
  font-size: 16px;
}

.menuSeparation {
  margin-right: 20px;
}

.mainSection {
  width: 100vw;
  height: 100vh;
  background-color: #3cdbc0;
  color: #ffffff;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-family: "Rubik", sans-serif;
}

@media all and (min-width: 768px) {
  .topHeader {
    justify-content: space-between;
    flex-direction: row;
    padding-bottom: 20px;
    padding-top: 20px;
  }

  .logo {
    margin-left: 30px;
  }

  .menu {
    margin-right: 30px;
  }
}

